--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                 <button class="bi"><i class="fas fa-star" style="color:white;"></i>&nbsp;4.7</button>
             </div>
             <div class="sect" id="d2">
-                <img class="i1" src="/home/lenovo/Downloads/card2.jpg" width="360" height="250">
+                <img class="i1" src="/images/card2.jpg" width="360" height="250">
                 <h3 class="hi">Divine Majesty at Jagannath Temple.</h3>
                 <p class="pi">Puri,Odisha,India</p>
                 <button class="bi"><i class="fas fa-star" style="color:white;"></i>&nbsp;4.8</button>
             </div>
             <div class="sect" id="d3">
-                <img class="i1" src="/home/lenovo/Downloads/card3.webp" width="360" height="250">
+                <img class="i1" src="/images/card3.webp" width="360" height="250">
                 <h3 class="hi">Spiritual Serenity at Neem Karoli Temple.</h3>
                 <p class="pi">Dehradun, India</p>
                 <button class="bi"><i class="fas fa-star" style="color:white;"></i>&nbsp;4.5</button>
