--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </nav>
         <section class="sec">
         <div>
-            <img class="img" src="/home/lenovo/Downloads/ChatGPT Image Jul 29, 2025, 09_45_14 AM.png">
+            <img class="img" src="images/ChatGPT Image Jul 29, 2025, 09_45_14 AM.png">
         </div>
         <div id="pos">
             <h4 style="font-weight:900; word-spacing:2px;">BUS YOUR TRAVEL JOURNEY</h4>
@@ -46,13 +46,13 @@
                 <button class="bi"><i class="fas fa-star" style="color:white;"></i>&nbsp;4.7</button>
             </div>
             <div class="sect" id="d2">
-                <img class="i1" src="/images/card2.jpg" width="360" height="250">
+                <img class="i1" src="images/card2.jpg" width="360" height="250">
                 <h3 class="hi">Divine Majesty at Jagannath Temple.</h3>
                 <p class="pi">Puri,Odisha,India</p>
                 <button class="bi"><i class="fas fa-star" style="color:white;"></i>&nbsp;4.8</button>
             </div>
             <div class="sect" id="d3">
-                <img class="i1" src="/images/card3.webp" width="360" height="250">
+                <img class="i1" src="images/card3.webp" width="360" height="250">
                 <h3 class="hi">Spiritual Serenity at Neem Karoli Temple.</h3>
                 <p class="pi">Dehradun, India</p>
                 <button class="bi"><i class="fas fa-star" style="color:white;"></i>&nbsp;4.5</button>
@@ -104,7 +104,7 @@
         <section>
             <div id="photo" width="98%">
                 <div>
-                    <img src="/home/lenovo/Downloads/showcase.webp" width="380px" height="540px"> 
+                    <img src="images/showcase.webp" width="380px" height="540px"> 
                 </div>
                 <div id="trip">
                     <h2>Ignite Your Wanderlust with Every Bus Ride</h2>
@@ -112,7 +112,7 @@
 Traveling by bus offers comfort and stunning views on your way to amazing destinations. With spacious seats and air conditioning, you can relax and enjoy the ride, whether you're heading to a vibrant city or a peaceful getaway. It’s the perfect way to travel affordably and conveniently while experiencing the beauty of the journey.</p>
 <p>Explore the World by Bus with Ease Hop on a bus and experience the joy of travel at your own pace. From comfortable seating to scenic routes, our buses offer the perfect way to explore cities, nature, and everything in between. Whether it's a quick trip or a long adventure, sit back, relax, and enjoy the ride. 
                     </p><br>
-                    <img src="/home/lenovo/Downloads/showcase2.jpeg"> 
+                    <img src="images/showcase2.jpeg"> 
                     <h4>BOOK A Bus Now -></h4>
             </div>
         </section>
